force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Loan Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Application&apos;s</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>