force-app/main/default/objects/Loan_Application__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Loan Application&apos;s</relationshipLabel>
    <relationshipName>Loan_Application_s</relationshipName>
    <type>Lookup</type>
</CustomField>