force-app/main/default/objects/Loan_Application__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>TextArea</type>
</CustomField>