force-app/main/default/objects/Loan_Application__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Loan Application&apos;s</relationshipLabel>
    <relationshipName>Loan_Application_s</relationshipName>
    <type>Lookup</type>
</CustomField>