force-app/main/default/objects/Loan_Application__c/recordTypes/Education_Loan.recordType-meta.xml
<RecordType>
    <fullName>Education_Loan</fullName>
    <active>false</active>
    <label>Education Loan</label>
</RecordType>