force-app/main/default/objects/Loan_Application__c/recordTypes/Home_Loan.recordType-meta.xml
<RecordType>
    <fullName>Home_Loan</fullName>
    <active>false</active>
    <label>Home Loan</label>
</RecordType>