force-app/main/default/objects/Loan_Application__c/recordTypes/loan.recordType-meta.xml
<RecordType>
    <fullName>loan</fullName>
    <active>true</active>
    <label>loan</label>
</RecordType>