force-app/main/default/objects/Loan_Application__c/recordTypes/Vehicle_Loan.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Loan</fullName>
    <active>false</active>
    <label>Vehicle Loan</label>
</RecordType>